# Printer-AI-MCP

./: Dockerfile  README.md  README_CN.md  docker-compose.yml  main.py  pyproject.toml
.cursor/rules/: cursor-rule.mdc
local_printer/: cups.py  windows.py
models/: model.py
