[project]
name = "printer-ai-mcp"
version = "0.1.0"
description = "Printer AI MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.15.0",
    "pycups>=2.0.4",
    "requests>=2.32.5",
]


[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
